overlays/dev/patch-worker-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: spark
spec:
  replicas: 2
