overlays/dev/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-master-ui
  namespace: spark
spec:
  rules:
    - host: spark-master.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-ui
  namespace: spark
spec:
  rules:
    - host: spark-history.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history
                port:
                  number: 18080
